Fixed gap on dropdown menu

--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,7 @@ p {
 .mobile-links {
   display: none;
   width: 45%;
-  top: 1.9rem;
+  top: 1.8rem;
   right: 0;
   margin-top: 5.2rem;
   position: fixed;
